--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,8 +2,8 @@ galaxy_info:
   author: Felix Fontein
   description: >
     Wrapper of Ansible's included acme_certificate module, whose aim is that almost no code
-    is executed on the webserver. Requires openssl and Python installed locally and
-    available on executable path.
+    is executed on the webserver. Requires the Python cryptography library as well as the
+    OpenSSL binary installed locally and available on executable path.
 
   license: MIT
 
