--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -58,7 +58,7 @@
 - block:
   - name: "Creating private key for domains {{ ', '.join(domains) }} (RSA)"
     openssl_privatekey:
-      path: "{{ keys_path }}{{ key_name }}.key"
+      path: "{{ keys_path }}/{{ key_name }}.key"
       mode: "{{ privatekey_mode }}"
       type: RSA
       size: "{{ key_length }}"
@@ -68,7 +68,7 @@
     run_once: yes
   - name: "Creating private key for domains {{ ', '.join(domains) }} (ECC)"
     openssl_privatekey:
-      path: "{{ keys_path }}{{ key_name }}.key"
+      path: "{{ keys_path }}/{{ key_name }}.key"
       mode: "{{ privatekey_mode }}"
       type: ECC
       curve: >-
@@ -87,8 +87,8 @@
 - block:
   - name: "Creating CSR for domains {{ ', '.join(domains) }}"
     openssl_csr:
-      path: "{{ keys_path }}{{ key_name }}.csr"
-      privatekey_path: "{{ keys_path }}{{ key_name }}.key"
+      path: "{{ keys_path }}/{{ key_name }}.csr"
+      privatekey_path: "{{ keys_path }}/{{ key_name }}.key"
       subject_alt_name: |
           {{ domains | map('regex_replace', '^(.*)$', 'DNS:\1' ) | list }}
       ocsp_must_staple: "{{ ocsp_must_staple }}"
@@ -103,7 +103,7 @@
 - name: "Get root certificate for domains {{ ', '.join(domains) }}"
   get_url:
     url: "{{ root_certificate }}"
-    dest: "{{ keys_path }}{{ key_name }}-root.pem"
+    dest: "{{ keys_path }}/{{ key_name }}-root.pem"
     force: yes
     validate_certs: "{{ validate_certs }}"
   delegate_to: localhost
@@ -117,10 +117,10 @@
     acme_certificate:
       account_key: "{{ acme_account }}"
       modify_account: "{{ modify_account }}"
-      csr: "{{ keys_path }}{{ key_name }}.csr"
-      dest: "{{ keys_path }}{{ key_name }}.pem"
-      fullchain_dest: "{{ keys_path }}{{ key_name }}-fullchain.pem"
-      chain_dest: "{{ keys_path }}{{ key_name }}-chain.pem"
+      csr: "{{ keys_path }}/{{ key_name }}.csr"
+      dest: "{{ keys_path }}/{{ key_name }}.pem"
+      fullchain_dest: "{{ keys_path }}/{{ key_name }}-fullchain.pem"
+      chain_dest: "{{ keys_path }}/{{ key_name }}-chain.pem"
       account_email: "{{ acme_email }}"
       terms_agreed: "{{ terms_agreed }}"
       challenge: "{{ challenge }}"
@@ -154,10 +154,10 @@
     acme_certificate:
       account_key: "{{ acme_account }}"
       modify_account: "{{ modify_account }}"
-      csr: "{{ keys_path }}{{ key_name }}.csr"
-      dest: "{{ keys_path }}{{ key_name }}.pem"
-      fullchain_dest: "{{ keys_path }}{{ key_name }}-fullchain.pem"
-      chain_dest: "{{ keys_path }}{{ key_name }}-chain.pem"
+      csr: "{{ keys_path }}/{{ key_name }}.csr"
+      dest: "{{ keys_path }}/{{ key_name }}.pem"
+      fullchain_dest: "{{ keys_path }}/{{ key_name }}-fullchain.pem"
+      chain_dest: "{{ keys_path }}/{{ key_name }}-chain.pem"
       account_email: "{{ acme_email }}"
       terms_agreed: "{{ terms_agreed }}"
       challenge: "{{ challenge }}"
@@ -172,8 +172,8 @@
 
   - name: "Form root chain for domains {{ ', '.join(domains) }}"
     copy:
-      dest: "{{ keys_path }}{{ key_name }}-rootchain.pem"
-      content: "{{ lookup('file', keys_path ~ key_name ~ '-root.pem') }}\n{{ lookup('file', keys_path ~ key_name ~ '-chain.pem') }}\n"
+      dest: "{{ keys_path }}/{{ key_name }}-rootchain.pem"
+      content: "{{ lookup('file', keys_path ~ '/' ~ key_name ~ '-root.pem') }}\n{{ lookup('file', keys_path ~ '/' ~ key_name ~ '-chain.pem') }}\n"
     delegate_to: localhost
     run_once: yes
   always:
@@ -191,7 +191,7 @@
   when: lets_encrypt_challenge is changed
 
 - name: "Verifying certificate for domains {{ ', '.join(domains) }}"
-  command: openssl verify -CAfile "{{ keys_path }}{{ key_name }}-root.pem" -untrusted "{{ keys_path }}{{ key_name }}-chain.pem" "{{ keys_path }}{{ key_name }}.pem"
+  command: openssl verify -CAfile "{{ keys_path }}/{{ key_name }}-root.pem" -untrusted "{{ keys_path }}/{{ key_name }}-chain.pem" "{{ keys_path }}/{{ key_name }}.pem"
   changed_when: no
   delegate_to: localhost
   run_once: yes
