Add and use path_join filter.

--- a/tasks/http-create.yml
+++ b/tasks/http-create.yml
@@ -15,7 +15,7 @@
 # Create challenge files on server.
 - name: "Copying challenge files for domains {{ ', '.join(domains) }}"
   copy:
-    dest: "{{ server_location }}/{{ item.value[challenge].resource[('.well-known/acme-challenge/'|length):] }}"
+    dest: "{{ [server_location, item.value[challenge].resource[('.well-known/acme-challenge/'|length):]] | path_join }}"
     content: "{{ item.value[challenge].resource_value }}"
     owner: "{{ http_challenge_user }}"
     group: "{{ http_challenge_group }}"
