--- a/tasks/http-cleanup.yml
+++ b/tasks/http-cleanup.yml
@@ -2,7 +2,7 @@
 # Clean up challenge files on server.
 - name: "Cleaning up challenge files for domains {{ ', '.join(domains) }}"
   file:
-    path: "{{ server_location }}/{{ item.value[challenge].resource[('.well-known/acme-challenge/'|length):] }}"
+    path: "{{ [server_location, item.value[challenge].resource[('.well-known/acme-challenge/'|length):]] | path_join }}"
     state: absent
   with_dict: "{{ lets_encrypt_challenge.get('challenge_data', {}) }}"
   become: "{{ http_become }}"
