--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,7 +20,7 @@
 - block:
   - name: "Test whether old certificate files for domains {{ ', '.join(domains) }} exist"
     stat:
-      path: "{{ keys_path }}/{{ key_name }}.pem"
+      path: "{{ [keys_path, key_name] | path_join }}.pem"
     delegate_to: localhost
     register: old_certificate_exists
     when: "keys_old_store"
@@ -28,8 +28,8 @@
 
   - name: "Copying old certificate files for domains {{ ', '.join(domains) }}"
     copy:
-      src: "{{ keys_path }}/{{ key_name }}{{ item }}"
-      dest: "{{ keys_old_path }}/{{ (ansible_date_time.date ~ '-' ~ ansible_date_time.hour ~ ansible_date_time.minute ~ ansible_date_time.second ~ '-') if keys_old_prepend_timestamp else '' }}{{ key_name }}{{ item }}"
+      src: "{{ [keys_path, key_name] | path_join }}{{ item }}"
+      dest: "{{ [keys_old_path, ((ansible_date_time.date ~ '-' ~ ansible_date_time.hour ~ ansible_date_time.minute ~ ansible_date_time.second ~ '-') if keys_old_prepend_timestamp else '') ~ key_name ~ item] | path_join }}"
     delegate_to: localhost
     with_items:
     - "-chain.pem"
@@ -58,7 +58,7 @@
 - block:
   - name: "Creating private key for domains {{ ', '.join(domains) }} (RSA)"
     openssl_privatekey:
-      path: "{{ keys_path }}/{{ key_name }}.key"
+      path: "{{ [keys_path, key_name ~ '.key'] | path_join }}"
       mode: "{{ privatekey_mode }}"
       type: RSA
       size: "{{ key_length }}"
@@ -68,7 +68,7 @@
     run_once: yes
   - name: "Creating private key for domains {{ ', '.join(domains) }} (ECC)"
     openssl_privatekey:
-      path: "{{ keys_path }}/{{ key_name }}.key"
+      path: "{{ [keys_path, key_name ~ '.key'] | path_join }}"
       mode: "{{ privatekey_mode }}"
       type: ECC
       curve: >-
@@ -87,8 +87,8 @@
 - block:
   - name: "Creating CSR for domains {{ ', '.join(domains) }}"
     openssl_csr:
-      path: "{{ keys_path }}/{{ key_name }}.csr"
-      privatekey_path: "{{ keys_path }}/{{ key_name }}.key"
+      path: "{{ [keys_path, key_name ~ '.csr'] | path_join }}"
+      privatekey_path: "{{ [keys_path, key_name ~ '.key'] | path_join }}"
       subject_alt_name: |
           {{ domains | map('regex_replace', '^(.*)$', 'DNS:\1' ) | list }}
       ocsp_must_staple: "{{ ocsp_must_staple }}"
@@ -103,7 +103,7 @@
 - name: "Get root certificate for domains {{ ', '.join(domains) }}"
   get_url:
     url: "{{ root_certificate }}"
-    dest: "{{ keys_path }}/{{ key_name }}-root.pem"
+    dest: "{{ [keys_path, key_name ~ '-root.pem'] | path_join }}"
     force: yes
     validate_certs: "{{ validate_certs }}"
   delegate_to: localhost
@@ -117,10 +117,10 @@
     acme_certificate:
       account_key: "{{ acme_account }}"
       modify_account: "{{ modify_account }}"
-      csr: "{{ keys_path }}/{{ key_name }}.csr"
-      dest: "{{ keys_path }}/{{ key_name }}.pem"
-      fullchain_dest: "{{ keys_path }}/{{ key_name }}-fullchain.pem"
-      chain_dest: "{{ keys_path }}/{{ key_name }}-chain.pem"
+      csr: "{{ [keys_path, key_name ~ '.csr'] | path_join }}"
+      dest: "{{ [keys_path, key_name ~ '.pem'] | path_join }}"
+      fullchain_dest: "{{ [keys_path, key_name ~ '-fullchain.pem'] | path_join }}"
+      chain_dest: "{{ [keys_path, key_name ~ '-chain.pem'] | path_join }}"
       account_email: "{{ acme_email }}"
       terms_agreed: "{{ terms_agreed }}"
       challenge: "{{ challenge }}"
@@ -154,10 +154,10 @@
     acme_certificate:
       account_key: "{{ acme_account }}"
       modify_account: "{{ modify_account }}"
-      csr: "{{ keys_path }}/{{ key_name }}.csr"
-      dest: "{{ keys_path }}/{{ key_name }}.pem"
-      fullchain_dest: "{{ keys_path }}/{{ key_name }}-fullchain.pem"
-      chain_dest: "{{ keys_path }}/{{ key_name }}-chain.pem"
+      csr: "{{ [keys_path, key_name ~ '.csr'] | path_join }}"
+      dest: "{{ [keys_path, key_name ~ '.pem'] | path_join }}"
+      fullchain_dest: "{{ [keys_path, key_name ~ '-fullchain.pem'] | path_join }}"
+      chain_dest: "{{ [keys_path, key_name ~ '-chain.pem'] | path_join }}"
       account_email: "{{ acme_email }}"
       terms_agreed: "{{ terms_agreed }}"
       challenge: "{{ challenge }}"
@@ -172,8 +172,8 @@
 
   - name: "Form root chain for domains {{ ', '.join(domains) }}"
     copy:
-      dest: "{{ keys_path }}/{{ key_name }}-rootchain.pem"
-      content: "{{ lookup('file', keys_path ~ '/' ~ key_name ~ '-root.pem') }}\n{{ lookup('file', keys_path ~ '/' ~ key_name ~ '-chain.pem') }}\n"
+      dest: "{{ [keys_path, key_name ~ '-rootchain.pem'] | path_join }}"
+      content: "{{ lookup('file', [keys_path, key_name ~ '-root.pem'] | path_join) }}\n{{ lookup('file', [keys_path, key_name ~ '-chain.pem'] | path_join) }}\n"
     delegate_to: localhost
     run_once: yes
   always:
@@ -191,7 +191,7 @@
   when: lets_encrypt_challenge is changed
 
 - name: "Verifying certificate for domains {{ ', '.join(domains) }}"
-  command: openssl verify -CAfile "{{ keys_path }}/{{ key_name }}-root.pem" -untrusted "{{ keys_path }}/{{ key_name }}-chain.pem" "{{ keys_path }}/{{ key_name }}.pem"
+  command: openssl verify -CAfile "{{ [keys_path, key_name ~ '-root.pem'] | path_join }}" -untrusted "{{ [keys_path, key_name ~ '-chain.pem'] | path_join }}" "{{ [keys_path, key_name ~ '.pem'] | path_join }}"
   changed_when: no
   delegate_to: localhost
   run_once: yes
