--- a/tasks/dns-gcdns-create.yml
+++ b/tasks/dns-gcdns-create.yml
@@ -8,12 +8,11 @@
     record: "{{ item.key }}"
     type: TXT
     ttl: 300
-    record_data: "{{ item.value | map('regex_replace', '^(.*)$', '\'\\1\'' ) | list }}"
+    record_data: "{{ item.value | map('regex_replace', '^(.*)$', '\"\\1\"' ) | list }}"
     overwrite: true
-    ...
+    # ...
   run_once: True
   with_dict: "{{ lets_encrypt_challenge.challenge_data_dns }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
-...
