--- a/tasks/dns-ns1-cleanup.yml
+++ b/tasks/dns-ns1-cleanup.yml
@@ -1,16 +1,16 @@
 ---
-- name: Cleaning up challenge DNS entries for domains {{ ', '.join(domains) }} via NS1 API
+- name: Cleaning up challenge DNS entries for domains {{ ', '.join(acme_certificate_domains) }} via NS1 API
   local_action:
     module: ns1_record
-    apiKey: "{{ ns1_secret_key }}"
+    apiKey: "{{ acme_certificate_ns1_secret_key }}"
     name: "{{ item.key }}"
     zone: "{{ item.key | regex_replace('^(?:.*\\.|)([^.]+\\.[^.]+)$', '\\1') }}"
     state: absent
     type: TXT
     answers: []
-  run_once: True
+  run_once: true
   when: "'_acme-challenge' in item.key"
-  with_dict: "{{ lets_encrypt_challenge.get('challenge_data_dns', {}) }}"
+  with_dict: "{{ acme_certificate_INTERNAL_challenge.get('challenge_data_dns', {}) }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
