--- a/tasks/dns-hosttech-create.yml
+++ b/tasks/dns-hosttech-create.yml
@@ -1,6 +1,6 @@
 ---
 # Create DNS challenges for DNS provider HostTech
-- name: Creating challenge DNS entries for domains {{ ', '.join(domains) }} via HostTech API
+- name: Creating challenge DNS entries for domains {{ ', '.join(acme_certificate_domains) }} via HostTech API
   local_action:
     module: hosttech_dns_record
     state: present
@@ -10,10 +10,10 @@
     ttl: 300
     value: "{{ item.value }}"
     overwrite: true
-    hosttech_username: "{{ hosttech_username }}"
-    hosttech_password: "{{ hosttech_password }}"
-  run_once: True
-  with_dict: "{{ lets_encrypt_challenge.challenge_data_dns }}"
+    hosttech_username: "{{ acme_certificate_hosttech_username }}"
+    hosttech_password: "{{ acme_certificate_hosttech_password }}"
+  run_once: true
+  with_dict: "{{ acme_certificate_INTERNAL_challenge.challenge_data_dns }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
