--- a/tasks/dns-route53-create.yml
+++ b/tasks/dns-route53-create.yml
@@ -1,6 +1,6 @@
 ---
 # Create DNS challenges for DNS provider Amazon Route53
-- name: Creating challenge DNS entries for domains {{ ', '.join(domains) }} via Route53
+- name: Creating challenge DNS entries for domains {{ ', '.join(acme_certificate_domains) }} via Route53
   local_action:
     module: route53
     state: present
@@ -10,11 +10,11 @@
     ttl: 60
     value: "{{ item.value | map('regex_replace', '^(.*)$', '\"\\1\"' ) | list }}"
     overwrite: true
-    aws_access_key: "{{ aws_access_key }}"
-    aws_secret_key: "{{ aws_secret_key }}"
+    aws_access_key: "{{ acme_certificate_aws_access_key }}"
+    aws_secret_key: "{{ acme_certificate_aws_secret_key }}"
     wait: true
-  run_once: True
-  with_dict: "{{ lets_encrypt_challenge.challenge_data_dns }}"
+  run_once: true
+  with_dict: "{{ acme_certificate_INTERNAL_challenge.challenge_data_dns }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
