--- a/tasks/http-cleanup.yml
+++ b/tasks/http-cleanup.yml
@@ -1,11 +1,15 @@
 ---
 # Clean up challenge files on server.
-- name: "Cleaning up challenge files for domains {{ ', '.join(domains) }}"
+- name: "Cleaning up challenge files for domains {{ ', '.join(acme_certificate_domains) }}"
   file:
-    path: "{{ [server_location, item.value[challenge].resource[('.well-known/acme-challenge/'|length):]] | path_join }}"
+    path: >-
+      {{ [
+        acme_certificate_server_location,
+        item.value[acme_certificate_challenge].resource[('.well-known/acme-challenge/'|length):]
+      ] | path_join }}"
     state: absent
-  with_dict: "{{ lets_encrypt_challenge.get('challenge_data', {}) }}"
-  become: "{{ http_become }}"
+  with_dict: "{{ acme_certificate_INTERNAL_challenge.get('acme_certificate_challenge_data', {}) }}"
+  become: "{{ acme_certificate_http_become }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
