--- a/sample-playbook.yml
+++ b/sample-playbook.yml
@@ -18,7 +18,7 @@
     # acme_certificate_dns_provider: ns1
     # acme_certificate_ns1_secret_key: REPLACE_WITH_YOUR_SECRET_KEY
   roles:
-    - role: acme-certificate
+    - role: acme_certificate
       acme_certificate_domains: ['example.com', 'www.example.com']
       # Use DNS challenges:
       acme_certificate_challenge: dns-01
@@ -31,7 +31,7 @@
       #    keys/example.com-fullchain.pem  (certificate with intermediate certificate)
       #    keys/example.com-root.pem  (root certificate)
       #    keys/example.com-rootchain.pem  (intermediate certificate with root certificate)
-    - role: acme-certificate
+    - role: acme_certificate
       acme_certificate_domains: ['another.example.com']
       acme_certificate_key_name: 'another.example.com-rsa'
       acme_certificate_key_length: 4096
@@ -46,7 +46,7 @@
       #    keys/another.example.com-rsa-fullchain.pem  (certificate with intermediate certificate)
       #    keys/another.example.com-rsa-root.pem  (root certificate)
       #    keys/another.example.com-rsa-rootchain.pem  (intermediate certificate with root certificate)
-    - role: acme-certificate
+    - role: acme_certificate
       acme_certificate_domains: ['another.example.com']
       acme_certificate_key_name: 'another.example.com-ecc'
       acme_certificate_algorithm: 'p-256'
