--- a/tasks/dns-ns1-cleanup.yml
+++ b/tasks/dns-ns1-cleanup.yml
@@ -1,13 +1,13 @@
 ---
 - name: Cleaning up challenge DNS entries for domains {{ ', '.join(acme_certificate_domains) }} via NS1 API
-  local_action:
-    module: ns1_record
+  ns1_record:
     apiKey: "{{ acme_certificate_ns1_secret_key }}"
     name: "{{ item.key }}"
     zone: "{{ item.key | regex_replace('^(?:.*\\.|)([^.]+\\.[^.]+)$', '\\1') }}"
     state: absent
     type: TXT
     answers: []
+  delegate_to: localhost
   run_once: true
   when: "'_acme-challenge' in item.key"
   with_dict: "{{ acme_certificate_INTERNAL_challenge.get('challenge_data_dns', {}) }}"
