--- a/tasks/dns-route53-cleanup.yml
+++ b/tasks/dns-route53-cleanup.yml
@@ -1,7 +1,7 @@
 ---
 # Clean up DNS challenges for DNS provider Amazon Route53
 - name: Cleaning up challenge DNS entries for domains {{ ', '.join(acme_certificate_domains) }} via Route53
-  route53:
+  community.aws.route53:
     state: absent
     zone: "{{ item.key | regex_replace('^(?:.*\\.|)([^.]+\\.[^.]+)$', '\\1') }}"
     record: "{{ item.key }}"
