--- a/tasks/http-cleanup.yml
+++ b/tasks/http-cleanup.yml
@@ -8,7 +8,7 @@
         item.value[acme_certificate_challenge].resource[('.well-known/acme-challenge/'|length):]
       ] | path_join }}"
     state: absent
-  with_dict: "{{ acme_certificate_INTERNAL_challenge.get('acme_certificate_challenge_data', {}) }}"
+  with_dict: "{{ acme_certificate_INTERNAL_challenge.get('challenge_data', {}) }}"
   become: "{{ acme_certificate_http_become }}"
   tags:
   - issue-tls-certs-newkey
